# lvgl-arm

./: CLAUDE.md  CMakeLists.txt  README.md  api.php  auto_build.sh  font_symbols.txt  main.c  my_font_cn.c  my_font_cn_48.c  patient.html  patient_queue.json
.trae/documents/: AI对话功能实现方案.md  LVGL卡死问题排查总结.md  屏幕闪烁功能实施计划.md
PatientManager/inc/: linked_list.h  stats.h
PatientManager/src/: linked_list.c  stats.c
UIManager/: ai_chat.c  ai_chat.h  ota_manager.c  ota_manager.h  sync_manager.c  sync_manager.h  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
UIManager/components/: ui_comp_hook.c
UIManager/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c
lv_drivers/: CMakeLists.txt  lv_drv_conf.h
lvgl/: lv_conf.h
miniprogam/: app.js  app.json  app.wxss  project.config.json  project.private.config.json
miniprogam/pages/add/: add.js  add.wxml  add.wxss
miniprogam/pages/index/: index.js  index.wxml  index.wxss
miniprogam/pages/queue/: queue.js  queue.wxml  queue.wxss
miniprogam/pages/stats/: stats.js  stats.wxml  stats.wxss
